Fix layout problem.

--- a/css/cashPlus.css
+++ b/css/cashPlus.css
@@ -2,6 +2,17 @@
   margin-top: 70px;
 }
 
+.content .title {
+  padding: 18px 0 0;
+}
+
 label#id-error {
   left: 41%;
+}
+
+@media(max-width:550px) {
+  #main {
+    margin-top: 33px;
+  }
+
 }
