--- a/css/signUp.css
+++ b/css/signUp.css
@@ -1,5 +1,5 @@
 #main {
-  margin-top: 80px;
+  margin-top: 67px;
 }
 
 #main .opcity {
@@ -28,7 +28,7 @@
 #main .row1 {
   max-width: 1400px;
   width: 100%;
-  margin: 40px auto 0;
+  margin: 0 auto;
   padding: 30px 0;
   background-color: #dddddd;
 }
